Some functions might not work with CJK character

XMLWordPrintable

    • b14
    • windows
    • Not verified

        We found the issue that HotSpot does not start when it is deployed on the path which contains CJK character(s), and it has been fixed in JDK-8240197.

        On the review of JDK-8240197 [1], we concern similar issue might occur in other place, and I found potentially problem in below:

        - ZFILE_Open() @ zip_util.c
        - JDK_Canonicalize() @ canonicalize_md.c (for Windows)
        - create_unc_path() @ java_md.c (for Windows)
        - Platform::MultibyteStringToWideString() @ WindowsPlatform.cpp


        [1] https://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2020-March/038397.html

              Assignee:
              Yasumasa Suenaga
              Reporter:
              Yasumasa Suenaga
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: