8240725: Some functions might not work with CJK character

Reviewed-by: naoto